# ClientServer

./: README.md
certs/: ca.crt  ca.key  client.crt  client.csr  client.key  client_cert.pem  client_privkey.pem  gen_certs.sh  openssl.cnf  root_client_cert.pem  root_client_privkey.pem  root_server_privkey.pem  server.crt  server.csr  server.key
grpc/go/: k6.js
grpc/go/client/: go.mod  main.go
grpc/go/client/app/: app.pb.go  app_grpc.pb.go
grpc/go/proto/: app.proto
grpc/go/server/: go.mod  go.sum  main.go
grpc/rust/: Cargo.toml  build.rs  k6.js
grpc/rust/proto/: app.proto
grpc/rust/src/: client.rs  lib.rs  server.rs
tcp/go/client/: go.mod  main.go
tcp/go/server/: go.mod  main.go
tcp/rust/: Cargo.toml
tcp/rust/src/: client.rs  client_async.rs  client_sync.rs  server.rs  server_async.rs  server_sync.rs
tls/go/client/: go.mod  main.go
tls/go/server/: go.mod  main.go
tls/rust/: Cargo.toml
tls/rust/src/: client.rs  server.rs
