[package]
name = "rustgrpc"
version = "0.1.0"
authors = ["user <email>"]
edition = "2021"

[lib]
path = "./src/lib.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tonic = { version = "0.5", features = ["transport", "tls" ] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.8"

[build-dependencies]
tonic-build = "0.5"
